OBPIH-6108 Trigger validation on default preference type clearing (Fixes after QA) (#4540)
* OBPIH-6108 trigger validation on PreferenceType when clearing default preference type subsection

* OBPIH-6108 Fix input error message styling on a form
- prevent inputs from jumping when errors appear under the input

* OBPIH-6108 chnage optional and null to nullish

--- a/src/js/wrappers/style.scss
+++ b/src/js/wrappers/style.scss
@@ -41,6 +41,9 @@
   .input-wrapper-error-message {
     order: 2;
     color: var(--color-red);
+    font-size: 12px;
+    line-height: 18px;
+    min-height: 18px;
   }
 }
 
